# karthaveerya-kubera

./: .env.example  .gitignore  README.md  pyproject.toml
config/: risk.yaml  symbols.yaml
deploy/: alphatrader.service
src/alphatrader/: __init__.py  __main__.py  db.py  factories.py  ledger.py  logging_setup.py  models.py  settings.py
src/alphatrader/agent/: analyst.py  pipeline.py
src/alphatrader/backtest/: engine.py  report.py  strategies.py
src/alphatrader/bot/: commands.py  telegram_app.py
src/alphatrader/data/: alpaca_data.py  ccxt_public.py  indicators.py  market.py  sources.py
src/alphatrader/llm/: anthropic_p.py  openai_compat.py  prompts.py  provider.py
src/alphatrader/reporting/: daily.py
src/alphatrader/risk/: engine.py  state.py
src/alphatrader/signals/: cards.py  lifecycle.py
src/alphatrader/ui/: __init__.py  dashboard.py
tests/: conftest.py  test_analyst.py  test_backtest.py  test_bot_commands.py  test_cards.py  test_dashboard.py  test_indicators.py  test_ledger.py  test_lifecycle.py  test_llm_providers.py  test_market_data.py  test_pipeline.py  test_reporting.py  test_risk_engine.py  test_sizing.py  test_spread_floor.py
