[project]
name = "alphatrader"
version = "0.1.0"
description = "AI Trading Signal Assistant (AlphaTrader HITL) — human-in-the-loop signal cards, no automated execution."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "alpaca-py>=0.21",
    "ccxt>=4.2",
    "pyyaml>=6.0",
    "rich>=13.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.98",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]  # str+Enum kept intentionally for pydantic JSON serialization
